frontend/virtual/Include/libadalang.h

/* Data type for all nodes. Nodes are assembled to make up a tree.  See the
   node primitives below to inspect such trees.

   Unlike for contexts and units, this type has weak-reference semantics:
   keeping a reference to a node has no effect on the decision to keep the unit
   that it owns allocated. This means that once all references to the context
   and units related to a node are dropped, the context and its units are
   deallocated and the node becomes a stale reference: most operations on it
   will raise a ``Stale_Reference_Error``.

   Note that since reparsing an analysis unit deallocates all the nodes it
   contains, this operation makes all reference to these nodes stale as
   well.   */
typedef void* ada_base_node;
typedef uint8_t ada_bool;
typedef struct ada_ada_node_array *ada_ada_node_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
        



typedef struct {
        ada_base_entity low_bound;
        ada_base_entity high_bound;
} ada_internal_discrete_range;
struct ada_ada_node_array {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        



/* This field can contain one of the following nodes:

   * ada_anonymous_type

   * ada_subtype_indication  */
extern int ada_discriminant_spec_f_type_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_discriminant_spec_f_default_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_formal_subp_decl

   * ada_generic_instantiation

   * ada_incomplete_type_decl

   * ada_number_decl

   * ada_object_decl

   * ada_single_protected_decl

   * ada_single_task_decl

   * ada_type_decl  */
extern int ada_generic_formal_f_decl(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_param_spec_f_ids(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_param_spec_f_has_aliased(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_param_spec_f_mode(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_anonymous_type

   * ada_subtype_indication  */
extern int ada_param_spec_f_type_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* This field can contain one of the following nodes:

   * ada_allocator

   * ada_attribute_ref

   * ada_base_aggregate

   * ada_bin_op

   * ada_call_expr

   * ada_case_expr

   * ada_char_literal

   * ada_dotted_name

   * ada_explicit_deref

   * ada_identifier

   * ada_if_expr

   * ada_membership_expr

   * ada_null_literal

   * ada_num_literal

   * ada_paren_expr

   * ada_qual_expr

   * ada_quantified_expr

   * ada_raise_expr

   * ada_string_literal

   * ada_target_name

   * ada_un_op  */
extern int ada_param_spec_f_default_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_base_package_decl_f_package_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_base_package_decl_f_public_part(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_base_package_decl_f_private_part(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_base_package_decl_f_end_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the PackageBody corresponding to this node.  */
extern int ada_base_package_decl_p_body_part(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        




extern int ada_base_type_decl_f_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* If this type decl is a subtype decl, return the base subtype. If not, return
   ``Self``.  */
extern int ada_base_type_decl_p_base_subtype(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        



/* Return the private completion for this type, if there is one.  */
extern int ada_base_type_decl_p_private_completion(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/* Return the record representation clause associated to this type decl, if
   applicable (i.e. this type decl defines a record type).  */
extern int ada_base_type_decl_p_get_record_representation_clause(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/* Return the enum representation clause associated to this type decl, if
   applicable (i.e. this type decl defines an enum type).  */
extern int ada_base_type_decl_p_get_enum_representation_clause(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/* Return whether this type is a record type.  */
extern int ada_base_type_decl_p_is_record_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Return whether this type is an array type.  */
extern int ada_base_type_decl_p_is_array_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Find types derived from self in the given ``root`` and its children.  */
extern int ada_base_type_decl_p_find_derived_types(
    ada_base_entity *node,

        
        const ada_base_entity*
        root,
        
        const ada_base_entity*
        origin,
        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/* Whether type is a real type or not.  */
extern int ada_base_type_decl_p_is_real_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Whether type is a float type or not.  */
extern int ada_base_type_decl_p_is_float_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Whether type is a fixed point type or not.  */
extern int ada_base_type_decl_p_is_fixed_point(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Whether type is an enum type  */
extern int ada_base_type_decl_p_is_enum_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Whether Self is an access type or not  */
extern int ada_base_type_decl_p_is_access_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Whether type is a character type or not  */
extern int ada_base_type_decl_p_is_char_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Return the discrete range for this type decl, if applicable.  */
extern int ada_base_type_decl_p_discrete_range(
    ada_base_entity *node,


    ada_internal_discrete_range *value_p
);
        



/* Whether type is a discrete type or not.  */
extern int ada_base_type_decl_p_is_discrete_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* Whether type is an integer type or not.  */
extern int ada_base_type_decl_p_is_int_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_bool *value_p
);
        



/* If this type is an access type, or a type with an Implicit_Dereference
   aspect, return the type of a dereference of an instance of this type.  */
extern int ada_base_type_decl_p_accessed_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);