frontend/virtual/Include/libadalang/libadalang-implementation-c.ads


   function ada_discriminant_spec_f_type_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_discriminant_spec_f_type_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Anonymous_Type
      --
      --  * Subtype_Indication

   function ada_discriminant_spec_f_default_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_discriminant_spec_f_default_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_generic_formal_f_decl
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_generic_formal_f_decl";
      --  This field can contain one of the following nodes:
      --
      --  * Formal_Subp_Decl
      --
      --  * Generic_Instantiation
      --
      --  * Incomplete_Type_Decl
      --
      --  * Number_Decl
      --
      --  * Object_Decl
      --
      --  * Single_Protected_Decl
      --
      --  * Single_Task_Decl
      --
      --  * Type_Decl

   function ada_param_spec_f_ids
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_spec_f_ids";

   function ada_param_spec_f_has_aliased
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_spec_f_has_aliased";

   function ada_param_spec_f_mode
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_spec_f_mode";

   function ada_param_spec_f_type_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_spec_f_type_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Anonymous_Type
      --
      --  * Subtype_Indication

   function ada_param_spec_f_default_expr
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_spec_f_default_expr";
      --  This field can contain one of the following nodes:
      --
      --  * Allocator
      --
      --  * Attribute_Ref
      --
      --  * Base_Aggregate
      --
      --  * Bin_Op
      --
      --  * Call_Expr
      --
      --  * Case_Expr
      --
      --  * Char_Literal
      --
      --  * Dotted_Name
      --
      --  * Explicit_Deref
      --
      --  * Identifier
      --
      --  * If_Expr
      --
      --  * Membership_Expr
      --
      --  * Null_Literal
      --
      --  * Num_Literal
      --
      --  * Paren_Expr
      --
      --  * Qual_Expr
      --
      --  * Quantified_Expr
      --
      --  * Raise_Expr
      --
      --  * String_Literal
      --
      --  * Target_Name
      --
      --  * Un_Op

   function ada_base_package_decl_f_package_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_package_decl_f_package_name";

   function ada_base_package_decl_f_public_part
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_package_decl_f_public_part";

   function ada_base_package_decl_f_private_part
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_package_decl_f_private_part";

   function ada_base_package_decl_f_end_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_package_decl_f_end_name";

   function ada_base_package_decl_p_body_part
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_package_decl_p_body_part";
      --  Return the PackageBody corresponding to this node.

   function ada_base_type_decl_f_name
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_f_name";

   function ada_base_type_decl_p_base_subtype
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_base_subtype";
      --  If this type decl is a subtype decl, return the base subtype. If not,
      --  return ``Self``.

   function ada_base_type_decl_p_private_completion
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_base_entity)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_private_completion";
      --  Return the private completion for this type, if there is one.

   function ada_base_type_decl_p_get_record_representation_clause
     (Node : ada_base_entity_Ptr;
Imprecise_Fallback :
ada_bool;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_get_record_representation_clause";
      --  Return the record representation clause associated to this type decl,
      --  if applicable (i.e. this type decl defines a record type).

   function ada_base_type_decl_p_get_enum_representation_clause
     (Node : ada_base_entity_Ptr;
Imprecise_Fallback :
ada_bool;

      Value_P : access ada_base_entity) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_get_enum_representation_clause";
      --  Return the enum representation clause associated to this type decl,
      --  if applicable (i.e. this type decl defines an enum type).

   function ada_base_type_decl_p_is_record_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_record_type";
      --  Return whether this type is a record type.

   function ada_base_type_decl_p_is_array_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_array_type";
      --  Return whether this type is an array type.

   function ada_base_type_decl_p_find_derived_types
     (Node   : ada_base_entity_Ptr;
Root         : access constant ada_base_entity;
      Origin : access constant ada_base_entity; Imprecise_Fallback :
ada_bool;

      Value_P : access ada_ada_node_array) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_find_derived_types";
      --  Find types derived from self in the given ``root`` and its children.

   function ada_base_type_decl_p_is_real_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_real_type";
      --  Whether type is a real type or not.

   function ada_base_type_decl_p_is_float_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_float_type";
      --  Whether type is a float type or not.

   function ada_base_type_decl_p_is_fixed_point
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_fixed_point";
      --  Whether type is a fixed point type or not.

   function ada_base_type_decl_p_is_enum_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_enum_type";
      --  Whether type is an enum type

   function ada_base_type_decl_p_is_access_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_access_type";
      --  Whether Self is an access type or not

   function ada_base_type_decl_p_is_char_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_char_type";
      --  Whether type is a character type or not

   function ada_base_type_decl_p_discrete_range
     (Node : ada_base_entity_Ptr;
Value_P    : access ada_internal_discrete_range)
      return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_discrete_range";
      --  Return the discrete range for this type decl, if applicable.

   function ada_base_type_decl_p_is_discrete_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_discrete_type";
      --  Whether type is a discrete type or not.

   function ada_base_type_decl_p_is_int_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;

      Value_P : access ada_bool) return int
with
      Export        => True,
      Convention    => C,
      External_Name => "ada_base_type_decl_p_is_int_type";
      --  Whether type is an integer type or not.

   function ada_base_type_decl_p_accessed_type
     (Node : ada_base_entity_Ptr;
Origin     : access constant ada_base_entity;
